# flake-templates

./: .gitignore  flake.nix
bun/: README.md  bun.lockb
devenv/: devenv.nix  flake.nix
direnv/: flake.nix
golang-service/: flake.nix
golang-service/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
golang-service/cmd/: main.go
golang-service/internal/api/: server.go  server_test.go
golang-service/internal/api/handlers/: handler_ctx.go
golang-service/pkg/api/: server.go
golang-service/pkg/api/handlers/: handler_ctx.go
golang-service/src/api/: server.go
golang-service/src/api/handlers/: handler_ctx.go
react/: flake.nix  package-lock.json  package.json
react/src/utils/: add.test.ts
rust/: Cargo.toml  flake.nix
ts/: add.test.ts  flake.nix
